--- a/app/src/main/res/layout/fragment_device_status.xml
+++ b/app/src/main/res/layout/fragment_device_status.xml
@@ -249,7 +249,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="请先链接蓝牙然后才能执行其他操作。\n1, 点击电池框图为发送读取电量；\n2,点击文件夹框图为发送自检命令。"
+        android:text="1, 点击电池框图为发送读取电量；\n2,点击文件夹框图为发送自检命令。"
         android:id="@+id/DescriptionTextView"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
@@ -260,12 +260,58 @@
         android:layout_height="wrap_content"
         android:text="@string/Command_Reset"
         android:id="@+id/id_Reset_button"
-        android:layout_above="@id/DescriptionTextView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="33dp"
         android:clickable="true"
         android:onClick="onButtonReset"
-        />
+        android:layout_above="@+id/DescriptionTextView"
+        android:layout_centerHorizontal="true" />
+
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/id_Reset_button"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/id_DebugText_View"
+        android:id="@+id/BTStatusLayout">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/BT_Status"
+            android:id="@+id/id_BTStatus_TextView"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Send_Times"
+            android:id="@+id/id_SendTimes_textView"
+            android:layout_below="@+id/id_BTStatus_TextView"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="0"
+            android:id="@+id/id_SendTime_Nub"
+            android:layout_below="@+id/id_BTStatus_TextView"
+            android:layout_toEndOf="@+id/id_SendTimes_textView" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Send_Time"
+            android:id="@+id/id_Time_textView"
+            android:layout_below="@+id/id_BTStatus_TextView"
+            android:layout_toEndOf="@+id/id_BTStatus_TextView"
+            android:layout_marginStart="52dp" />
+
+
+    </RelativeLayout>
 
     <!--
     <LinearLayout
