Fix bug for tab scroll. It's a very strange bug...

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,8 @@
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
             android:layout_marginTop="1dp"
-            android:fillViewport="false" />
+            android:fillViewport="false"
+            />
 
     </android.support.design.widget.AppBarLayout>
 
