--- a/app/src/main/res/layout/fragment_engineering_mode.xml
+++ b/app/src/main/res/layout/fragment_engineering_mode.xml
@@ -9,33 +9,20 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="wxg.otdr.MainActivity$PlaceholderFragment">
 
-    <!--
-    <Button
-        android:id="@+id/button_open_History"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Document_Title"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:gravity="right|center"
-
-        android:layout_marginTop="3dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:drawableLeft="@drawable/folder56"
-        android:background="@color/transparent"
-        android:onClick="OpenFile"
-    />
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
-        android:layout_alignParentLeft="true"
+    <ExpandableListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/expandableListView"
+        android:layout_alignBottom="@+id/listView"
         android:layout_alignParentStart="true"
-        android:layout_below="@id/button_open_History"
-        android:layout_marginTop="5dp"
-    />
-    -->
+        android:layout_marginStart="194dp"
+        android:layout_marginBottom="107dp" />
 </RelativeLayout>
