--- a/app/src/main/res/layout/fragment_engineering_mode.xml
+++ b/app/src/main/res/layout/fragment_engineering_mode.xml
@@ -13,16 +13,20 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"
+        android:id="@+id/Engineering_listView"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="80dp"/>
 
-    <ExpandableListView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/expandableListView"
-        android:layout_alignBottom="@+id/listView"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="194dp"
-        android:layout_marginBottom="107dp" />
+        android:text="@string/Command_Reset"
+        android:id="@+id/id_Reset_button"
+        android:clickable="true"
+        android:onClick="onButtonReset"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp" />
+
 </RelativeLayout>
