--- a/app/src/main/res/layout/engineering_item.xml
+++ b/app/src/main/res/layout/engineering_item.xml
@@ -10,17 +10,16 @@
     <TextView
         android:id="@+id/text_view"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
-        android:layout_height="50dp"/>
+        />
     <EditText
         android:id="@+id/edit_text"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="20dp"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:gravity="top"
-        android:padding="5dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/shape_edittext"/>
 
 </LinearLayout>
