--- a/app/src/main/res/layout/fragment_device_status.xml
+++ b/app/src/main/res/layout/fragment_device_status.xml
@@ -258,11 +258,11 @@
         android:layout_alignEnd="@+id/id_DebugText_View">
 
 
-        <TextView
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/BT_Status"
-            android:id="@+id/id_BTStatus_TextView"
+            android:id="@+id/id_BTStatus_Button"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
             android:textSize="20sp"/>
@@ -270,144 +270,47 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/Send_Times"
-            android:id="@+id/id_SendTimes_textView"
-            android:layout_below="@+id/id_BTStatus_TextView"
-            android:layout_alignParentStart="true"
-            android:textSize="20sp"/>
+            android:text="@string/Select_Send_Times"
+            android:id="@+id/id_SendTimes"
+            android:textSize="20sp"
+            android:editable="false"
+            android:layout_alignBottom="@+id/id_BTStatus_Button"
+            android:layout_toEndOf="@+id/id_BTStatus_Button" />
+
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/id_Spinner_Times"
+            android:layout_alignParentEnd="true"
+            android:text="1"
+            android:spinnerMode="dropdown"
+            android:layout_toEndOf="@+id/id_SendTimes"
+            android:layout_alignTop="@+id/id_SendTimes"
+            android:layout_above="@+id/id_SendTimes_Message" />
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="01"
-            android:id="@+id/id_SendTime_Nub"
-            android:layout_below="@+id/id_BTStatus_TextView"
-            android:layout_toEndOf="@+id/id_SendTimes_textView"
-            android:textSize="20sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Send_Time"
-            android:id="@+id/id_Time_textView"
-            android:layout_below="@+id/id_BTStatus_TextView"
-            android:layout_toEndOf="@+id/id_BTStatus_TextView"
-            android:layout_marginStart="16dp"
-            android:textSize="20sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0000"
-            android:id="@+id/id_SendTime_0"
-            android:layout_below="@id/id_SendTimes_textView"
+            android:text="发射信息："
+            android:id="@+id/id_Message_TextView"
             android:layout_alignParentStart="true"
             android:layout_marginTop="3dp"
             android:textSize="20sp"
             android:editable="false"
-
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0001"
-            android:id="@+id/id_SendTime_1"
-            android:layout_below="@id/id_SendTimes_textView"
-            android:layout_toEndOf="@id/id_SendTime_0"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="3dp"
-            android:textSize="20sp"/>
+            android:layout_below="@id/id_BTStatus_Button" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0002"
-            android:id="@+id/id_SendTime_2"
-            android:layout_below="@id/id_SendTimes_textView"
-            android:layout_toEndOf="@id/id_SendTime_1"
-            android:layout_marginStart="10dp"
+            android:text="2016-11-22   11:11:11"
+            android:autoText="true"
+            android:id="@+id/id_SendTimes_Message"
             android:layout_marginTop="3dp"
             android:textSize="20sp"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0003"
-            android:id="@+id/id_SendTime_3"
-            android:layout_below="@id/id_SendTimes_textView"
-            android:layout_toEndOf="@id/id_SendTime_2"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="3dp"
-            android:textSize="20sp"
-            />
+            android:layout_toEndOf="@id/id_Message_TextView"
+            android:layout_alignBottom="@id/id_Message_TextView"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0004"
-            android:id="@+id/id_SendTime_4"
-            android:layout_below="@id/id_SendTimes_textView"
-            android:layout_toEndOf="@id/id_SendTime_3"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="3dp"
-            android:textSize="20sp"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0005"
-            android:id="@+id/id_SendTime_5"
-            android:layout_below="@id/id_SendTime_0"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="3dp"
-            android:textSize="20sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0006"
-            android:id="@+id/id_SendTime_6"
-            android:layout_below="@id/id_SendTime_0"
-            android:layout_toEndOf="@id/id_SendTime_5"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="3dp"
-            android:textSize="20sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0007"
-            android:id="@+id/id_SendTime_7"
-            android:layout_below="@id/id_SendTime_0"
-            android:layout_toEndOf="@id/id_SendTime_6"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="3dp"
-            android:textSize="20sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0008"
-            android:id="@+id/id_SendTime_8"
-            android:layout_below="@id/id_SendTime_0"
-            android:layout_toEndOf="@id/id_SendTime_7"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="3dp"
-            android:textSize="20sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0009"
-            android:id="@+id/id_SendTime_9"
-            android:layout_below="@id/id_SendTime_0"
-            android:layout_toEndOf="@id/id_SendTime_8"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="3dp"
-            android:textSize="20sp"/>
 
     </RelativeLayout>
 
@@ -470,9 +373,9 @@
             android:layout_height="40dp"
             android:text="读取"
             android:id="@+id/id_Read_Button"
-            android:layout_alignParentTop="true"
             android:onClick="onButtonReadTime"
-            android:layout_toStartOf="@+id/id_Set_Button" />
+            android:layout_alignTop="@+id/id_Time_TextView"
+            android:layout_alignParentEnd="true" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -480,7 +383,8 @@
             android:layout_height="40dp"
             android:text="设置"
             android:id="@+id/id_Set_Button"
-            android:layout_alignParentTop="true"
+            android:onClick="onButtonSetTime"
+            android:layout_alignBottom="@+id/id_Edit_Time"
             android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
